Fix for body background contrast and tel and email links Lighthouse color contrast ratio accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 body {
     font-family: var(--primary-font);
     padding-top: 56px; /* pushes the top of the header down under fixed navbar */
+    background-color: antiquewhite;
 }
 
 h1,
@@ -140,6 +141,10 @@ h2 {
     color: var(--secondary-color);
     font-size: 1.2rem;
     margin-right: 15px;
+}
+
+#contact .linkcolor {
+    color: aliceblue;
 }
 
 #contact .social-links i {
